added in the collections slide

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "animejs": "^3.2.1",
+    "flickity": "2.2",
+    "in-view": "^0.6.1",
     "node-sass": "^9.0.0"
   }
 }
