--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "animejs": "^3.2.1",
+    "choices.js": "^10.2.0",
     "flickity": "2.2",
     "in-view": "^0.6.1",
     "node-sass": "^9.0.0",
