--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.9.3",
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "animejs": "^3.2.1",
@@ -27,6 +28,8 @@
     "in-view": "^0.6.1",
     "node-sass": "^9.0.0",
     "notyf": "^3.10.0",
+    "splitting": "^1.1.0",
+    "typewriter-effect": "^2.21.0",
     "vanilla-js-match-height": "^1.0.6"
   }
 }
