--- a/templates/collection.breast-feeding.json
+++ b/templates/collection.breast-feeding.json
@@ -21,7 +21,7 @@
     "text_banner_J3Yrak": {
       "type": "text-banner",
       "settings": {
-        "heading": "BREAST FEEDING"
+        "heading": "breast-feeding"
       }
     }
   },
