--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "animejs": "^3.2.2",
     "choices.js": "^11.0.6",
     "flickity": "2.2",
